cmake_minimum_required(VERSION 3.2)

PROJECT(luamysql)
INCLUDE(cmake/ModuleImport.cmake)
LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()

SET(LUAMYSQL_VERSION_MAJOR "1")
SET(LUAMYSQL_VERSION_MINOR "0")
SET(LUAMYSQL_VERSION_PATCH "1")
SET(LUAMYSQL_VERSION "${LUAMYSQL_VERSION_MAJOR}.${LUAMYSQL_VERSION_MINOR}.${LUAMYSQL_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${LUAMYSQL_VERSION}")

ADD_DEFINITIONS(-DUSE_LUAMYSQL)

ModuleImport2("mysql" "thirdparty/mysql")

IF (WIN32)
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/windows)
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/luamysql)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/test)

LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/bin)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)

FILE(GLOB DMLUA_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.c
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.h
)

LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "lua.c$")
LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "luac.c$")
LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "wmain.c$")

FILE(GLOB LUA_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/src/lua/lua.c
)

FILE(GLOB LUAMYSQL_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/include/*.h

${CMAKE_CURRENT_SOURCE_DIR}/src/luamysql/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/src/luamysql/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/src/luamysql/*.c
${CMAKE_CURRENT_SOURCE_DIR}/src/luamysql/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/src/luamysql/*.h
)

IF (WIN32)
    LIST(APPEND LUAMYSQL_SOURCES)
ENDIF(WIN32)

FILE(GLOB_RECURSE LUAMYSQLTEST_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/test/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/test/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/test/*.c
${CMAKE_CURRENT_SOURCE_DIR}/test/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/test/*.h)

IF (WIN32)
    ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})

    ADD_LIBRARY(luamysql SHARED ${LUAMYSQL_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/src/luamysql/luamysql_module.def)

    TARGET_LINK_LIBRARIES(luamysql lua53 libmysql)

    ADD_EXECUTABLE(lua ${LUA_SOURCES})
    TARGET_LINK_LIBRARIES(lua lua53)

    ADD_EXECUTABLE(luamysqltest ${LUAMYSQLTEST_SOURCES})
    TARGET_LINK_LIBRARIES(luamysqltest luamysql)
    
    SET_TARGET_PROPERTIES(lua53 PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL -DLUA_CORE")
    SET_TARGET_PROPERTIES(luamysql PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL -DLUA_LIB")
    SET_TARGET_PROPERTIES(luamysqltest PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL")
ELSEIF (APPLE)
    ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})

    ADD_LIBRARY(luamysql SHARED ${LUAMYSQL_SOURCES})
    TARGET_LINK_LIBRARIES(luamysql lua53 ${MYSQL_LIBRARIES})

    ADD_EXECUTABLE(lua ${LUA_SOURCES})
    TARGET_LINK_LIBRARIES(lua lua53)

    ADD_EXECUTABLE(luamysqltest ${LUAMYSQLTEST_SOURCES})
    TARGET_LINK_LIBRARIES(luamysqltest luamysql)
ELSEIF (UNIX)
    ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})
    SET_TARGET_PROPERTIES(lua53 PROPERTIES COMPILE_FLAGS "-Wl,-E" )

    ADD_LIBRARY(luamysql SHARED ${LUAMYSQL_SOURCES})
    SET_TARGET_PROPERTIES(luamysql PROPERTIES COMPILE_FLAGS "-Wl,-E" )
    TARGET_LINK_LIBRARIES(luamysql ${MYSQL_LIBRARIES})

    ADD_EXECUTABLE(lua ${LUA_SOURCES})
    TARGET_LINK_LIBRARIES(lua lua53 m)
    
    ADD_EXECUTABLE(luamysqltest ${LUAMYSQLTEST_SOURCES})
    TARGET_LINK_LIBRARIES(luamysqltest luamysql)
ENDIF ()

#ADD_CUSTOM_COMMAND(
#TARGET luamysqltest
#PRE_BUILD
#COMMAND ${CMAKE_COMMAND} -E copy_if_different
#${CMAKE_CURRENT_SOURCE_DIR}/config/test.csv
#$<TARGET_FILE_DIR:luamysqltest>
#)

#INSTALL(DIRECTORY include/ DESTINATION include)
#INSTALL(TARGETS luamysql
#        RUNTIME DESTINATION bin
#        LIBRARY DESTINATION lib
#        ARCHIVE DESTINATION lib)

#SET(LUAMYSQL_LIBS "luamysql")
#MARK_AS_ADVANCED(${LUAMYSQL_LIBS})